--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "mr-playstations-name-generator",
     "version": "0.1.0",
     "private": true,
+    "homepage": "http://dorward.github.io/mr-playstations-name-generator",
     "dependencies": {
         "@testing-library/jest-dom": "^5.11.4",
         "@testing-library/react": "^11.1.0",
@@ -25,7 +26,9 @@
         "build": "react-scripts build",
         "test": "react-scripts test",
         "eject": "react-scripts eject",
-        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix"
+        "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
+        "predeploy": "npm run build",
+        "deploy": "gh-pages -b main -d build"
     },
     "eslintConfig": {
         "extends": [
@@ -52,6 +55,7 @@
         "eslint": "^7.20.0",
         "eslint-config-prettier": "^8.0.0",
         "eslint-plugin-prettier": "^3.3.1",
+        "gh-pages": "^3.1.0",
         "prettier": "^2.2.1"
     }
 }
