--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
         "eject": "react-scripts eject",
         "lint": "eslint '*/**/*.{js,ts,tsx}' --quiet --fix",
         "predeploy": "npm run build",
-        "deploy": "gh-pages -b main -d build"
+        "deploy": "gh-pages -d build"
     },
     "eslintConfig": {
         "extends": [
